add featured content section before responsive styling

--- a/index.html
+++ b/index.html
@@ -24,23 +24,11 @@
       content="telephone=no, date=no, address=no, email=no, url=no"
     />
     <meta name="x-apple-disable-message-reformatting" />
-    <meta name="color-scheme" content="light dark" />
-    <meta name="supported-color-schemes" content="light dark" />
 
     <style type="text/css">
-      :root {
-        color-scheme: light dark;
-        supported-color-schemes: light dark;
-      }
-
       /* This snippet removes random blue links on Apple Devices */
       a[x-apple-data-detectors] {
         color: inherit !important;
-        text-decoration: none !important;
-      }
-
-      /* This will stop email clients from adding random styling to phone numbers */
-      a[href^="tel"]:hover {
         text-decoration: none !important;
       }
 
@@ -94,11 +82,12 @@
     class="body"
     xml:lang="en"
     style="
-      background: #efefef;
+      font-family: sans-serif;
       margin: 0;
       padding: 0;
       -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+      word-spacing: normal;
     "
   >
     <div
@@ -131,12 +120,160 @@
         cellpadding="0"
         cellspacing="0"
         width="100%"
-        bgcolor="#EFEFEF"
         class="wrapper"
         role="presentation"
       >
         <tr>
-          <td align="center" valign="top" width="100%"></td>
+          <td align="center" valign="top" width="100%">
+            <!--[if mso]>
+            <table role="presentation" align="center" style="width: 600px;">
+                <tr>
+                    <td style="padding: 20px 0;">
+            <![endif]  -->
+            <div
+              style="
+                width: 100%;
+                max-width: 600px;
+                margin: 20px auto;
+                background-color: #f2f0eb;
+              "
+            >
+              <!-- Begin header -->
+              <table
+                role="presentation"
+                style="width: 100%; border: 0; border-spacing: 0"
+              >
+                <tr>
+                  <td
+                    style="
+                      font-size: 24px;
+                      line-height: 28px;
+                      font-weight: bold;
+                    "
+                  >
+                  <a href="https://podcasters.spotify.com/pod/login?utm_source=email&utm_medium=braze&utm_campaign=may_recroom_2023&utm_term=hosted_nonpub_active_US&%24web_only=true">
+
+                      <img
+                      src="https://i.ibb.co/0YpLtfX/hero-min.webp"
+                      alt="Rec Room: Your go-to resource for all things podcasting."
+                      border="0"
+                      style="width: 100%; height: auto;max-width:100%; display: block;"
+                      width="600"
+                      />
+                    </a>
+                  </td>
+                </tr>
+              </table>
+              <!-- End header -->
+
+              <!-- Begin featured content -->
+              <table
+                role="presentation"
+                style="width: 100%; border: 0; border-spacing: 0"
+              >
+                <tr>
+                  <td
+                    style="
+                      padding: 40px 25px 0px;
+                      font-size: 24px;
+                      line-height: 28px;
+                      font-weight: bold;
+                    "
+                  >
+                    <a
+                      href="https://podcasters.spotify.com/resources/learn/create/podcast-segment-ideas"
+                      target="_blank"
+                    >
+                      <img
+                        src="https://i.ibb.co/3RBNvNC/podcast-wheel-min.webp"
+                        alt="podcast-wheel-min"
+                        border="0"
+                        width="550"
+                        style="max-width:100%;height:auto; display: block; width: 100%;"
+                      />
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding: 35px 25px 0px 25px">
+                    <h2
+                      style="
+                        font-family: Helvetica, 'Helvetica Neue', Helvetica,
+                          Arial, sans-serif;
+                        font-weight: 500;
+                        text-decoration: none;
+                        letter-spacing: 0.15px;
+                        color: #000000;
+                        font-size: 54px;
+                        line-height: 56px;
+                        margin: 0px;
+                      "
+                      align="left"
+                    >
+                    <strong
+                    >9 podcast segment ideas to captivate your
+                    listeners</strong
+                    </h2>
+                  </td>
+                </tr>
+                <tr>
+                    <td style="padding: 20px 25px" >
+                        <p style="
+                        font-family: Helvetica, 'Helvetica Neue', Helvetica,
+                          Arial, sans-serif;
+                        font-weight: 400;
+                        text-decoration: none;
+                        letter-spacing: 0.15px;
+                        color: #000000;
+                        font-size: 18px;
+                        line-height: 22px;
+                        margin: 0px;
+                      "
+                      align="left">Keep listeners coming back with podcast segments that build your brand and add depth to your show.</p>
+                    </td>
+                </tr>
+              </table>
+              <div style="text-align: left; font-size: 0;">
+                <!--[if mso]>
+                    <table role="presentation" width="100%">
+                        <tr>
+                            <td style="width:50%; valign="middle">
+                <![endif]-->
+                <div style="width: 100%; max-width: 300px; display: inline-block; vertical-align:middle;"><div style="padding: 5px 25px; text-align: left;"><!--[if mso]>
+                    <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://podcasters.spotify.com/resources/learn/create/podcast-segment-ideas" style="height:44px;v-text-anchor:middle;width:160px;" arcsize="110%" stroke="f" fillcolor="#9691ff">
+                      <w:anchorlock/>
+                      <center>
+                    <![endif]-->
+                        <a href="https://podcasters.spotify.com/resources/learn/create/podcast-segment-ideas"
+                  style="background-color:#9691ff;border-radius:48px;color:#191414;display:inline-block;font-family:sans-serif;font-size:13px;font-weight:bold;line-height:44px;text-align:center;text-decoration:none;width:160px;-webkit-text-size-adjust:none;"><strong>Check it out</strong></a>
+                    <!--[if mso]>
+                      </center>
+                    </v:roundrect>
+                  <![endif]--></div></div>
+                <!--[if mso]>
+                            </td>
+                            <td style="width:50%;" valign="middle">
+                <![endif]-->
+                <div style="width: 100%; max-width: 300px; display: inline-block; vertical-align:middle;">
+                  <div style="padding: 5px 25px;">
+
+                    <img src="https://i.ibb.co/TcMYQyw/arrow-design-min.webp" alt="" width="250" border="0" style="max-width:100%;height:auto; display: block; width: 100%;">
+                  </div>
+                    
+                </div> 
+                <!--[if mso]>
+                            </td>
+                        </tr>
+                    </table>   
+                 <![endif]-->
+              </div>
+            </div>
+            <!--[if mso]>
+                    </td>
+                 </tr>
+            </table>
+            <![endif] -->
+          </td>
         </tr>
       </table>
     </div>
