add podcast idea section before responsiveness

--- a/index.html
+++ b/index.html
@@ -233,6 +233,8 @@
                     </td>
                 </tr>
               </table>
+  
+
               <div style="text-align: left; font-size: 0;">
                 <!--[if mso]>
                     <table role="presentation" width="100%">
@@ -266,6 +268,139 @@
                         </tr>
                     </table>   
                  <![endif]-->
+              </div>
+              <!-- End featured content -->
+              
+              <div class="spacer" style="line-height:30px;height:30px;mso-line-height-rule:exactly;">&nbsp;</div>
+
+              <!-- Begin podcast ideas -->
+              <div style="text-align:center;font-size:0;">
+                <!--[if mso]>
+                  <table role="presentation" width="100%">
+                    <tr>
+                      <td style="width:50%;">
+                <![endif]-->
+                        <div style="width: 100%; max-width: 300px; display: inline-block; vertical-align:top;"> <div style="padding: 0px 18px 0px 25px">
+                          <p style="font-size: 24px;
+                          line-height: 28px;
+                          font-weight: bold;
+                          ">
+                            <a href="https://podcasters.spotify.com/resources/learn/create/funny-podcast-ideas?utm_source=email&utm_medium=braze&utm_campaign=may_recroom_2023&utm_term=hosted_nonpub_active_US&%24web_only=true" target="_blank">
+                              <img src="https://i.ibb.co/fD4kJr6/comedy-podcast-min.png" alt="How to make a great comedy podcast" border="0" width="257">
+                            </a>
+                          </p>
+                          <h2 align="left" style="
+                          font-family: Helvetica, 'Helvetica Neue',
+                            Helvetica, Arial, sans-serif;
+                          font-weight: 500;
+                          text-decoration: none;
+                          letter-spacing: 0.15px;
+                          color: #121212;
+                          font-size: 22px;
+                          line-height: 28px;
+                          padding-top: 15px;
+                          margin: 0px;
+                        "><strong>How to make a great comedy podcast</strong></h2>
+                          <p style="
+                          font-family: Helvetica, 'Helvetica Neue',
+                            Helvetica, Arial, sans-serif;
+                          font-weight: 400;
+                          text-decoration: none;
+                          letter-spacing: 0.15px;
+                          color: #121212;
+                          font-size: 16px;
+                          line-height: 22px;
+                          margin: 0px;
+                          padding: 8px 0px 0px
+                        "
+                        align="left">Spotify creators share their insights on what makes a podcast funny and how you can integrate humor into yours.</p>
+                        <p  style="
+                        font-family: Helvetica, 'Helvetica Neue',
+                          Helvetica, Arial, sans-serif;
+                        font-weight: 400;
+                        text-decoration: none;
+                        letter-spacing: 0.15px;
+                        color: #26008d;
+                        font-size: 16px;
+                        line-height: 22px;
+                        margin: 0px;
+                        padding: 8px 0px 0px
+                      "
+                      align="left">
+                        <a href="https://podcasters.spotify.com/resources/learn/create/funny-podcast-ideas?utm_source=email&utm_medium=braze&utm_campaign=may_recroom_2023&utm_term=hosted_nonpub_active_US&%24web_only=true" style="
+                        color: #26008d;
+                        text-decoration: none;
+                        font-weight: bold;
+                      "
+                      target="_blank"><strong>LEARN MORE ►</strong></a>
+                    </p>
+                        </div>
+                      </div>
+                <!--[if mso]>
+                      </td>
+                      <td style="width:50%;">
+                <![endif]-->
+                <div style="width: 100%; max-width: 300px; display: inline-block; vertical-align:top;"> <div style="padding: 0px 18px 0px 25px">
+                  <p style="font-size: 24px;
+                  line-height: 28px;
+                  font-weight: bold;
+                  ">
+                    <a href="https://podcasters.spotify.com/resources/learn/create/trending-podcast-topics?utm_source=email&utm_medium=braze&utm_campaign=may_recroom_2023&utm_term=hosted_nonpub_active_US&%24web_only=true" target="_blank">
+                      <img src="https://i.ibb.co/k4wRNkJ/trending-topics-min.png" alt="How to find (and use!) trending podcast topics" border="0" width="257">
+                    </a>
+                  </p>
+                  <h2 align="left" style="
+                  font-family: Helvetica, 'Helvetica Neue',
+                    Helvetica, Arial, sans-serif;
+                  font-weight: 500;
+                  text-decoration: none;
+                  letter-spacing: 0.15px;
+                  color: #121212;
+                  font-size: 22px;
+                  line-height: 28px;
+                  padding-top: 15px;
+                  margin: 0px;
+                "><strong>How to find (and use!) trending podcast topics</strong></h2>
+                  <p style="
+                  font-family: Helvetica, 'Helvetica Neue',
+                    Helvetica, Arial, sans-serif;
+                  font-weight: 400;
+                  text-decoration: none;
+                  letter-spacing: 0.15px;
+                  color: #121212;
+                  font-size: 16px;
+                  line-height: 22px;
+                  margin: 0px;
+                  padding: 8px 0px 0px
+                "
+                align="left">Keep your podcast relevant by staying on top of trending podcast topics.</p>
+                <p  style="
+                font-family: Helvetica, 'Helvetica Neue',
+                  Helvetica, Arial, sans-serif;
+                font-weight: 400;
+                text-decoration: none;
+                letter-spacing: 0.15px;
+                color: #26008d;
+                font-size: 16px;
+                line-height: 22px;
+                margin: 0px;
+                padding: 8px 0px 0px
+              "
+              align="left">
+                <a href="https://podcasters.spotify.com/resources/learn/create/funny-podcast-ideas?utm_source=email&utm_medium=braze&utm_campaign=may_recroom_2023&utm_term=hosted_nonpub_active_US&%24web_only=true" style="
+                color: #26008d;
+                text-decoration: none;
+                font-weight: bold;
+              "
+              target="_blank"><strong>READ ON ►</strong></a>
+            </p>
+                </div>
+              </div>
+                <!--[if mso]>
+                      </td>
+                    </tr>
+                  </table>
+                <![endif]-->
               </div>
             </div>
             <!--[if mso]>
