add community and get resources sections before responsiveness

--- a/index.html
+++ b/index.html
@@ -278,12 +278,13 @@
                         color: #191414;
                         display: inline-block;
                         font-family: sans-serif;
-                        font-size: 13px;
+                        font-size: 16px;
                         font-weight: bold;
                         line-height: 44px;
                         text-align: center;
                         text-decoration: none;
                         width: 160px;
+                        letter-spacing: 0.2px;
                         -webkit-text-size-adjust: none;
                       "
                       ><strong>Check it out</strong></a
@@ -700,7 +701,7 @@
                               style="
                                 color: #121212;
                                 font-family: sans-serif;
-                                font-size: 13px;
+                                font-size: 16px;
                                 font-weight: bold;
                               "
                             >
@@ -716,12 +717,13 @@
                             color: #121212;
                             display: inline-block;
                             font-family: sans-serif;
-                            font-size: 13px;
+                            font-size: 16px;
                             font-weight: bold;
                             line-height: 36px;
                             text-align: center;
                             text-decoration: none;
                             width: 160px;
+                            letter-spacing: 0.2px;
                             -webkit-text-size-adjust: none;
                             mso-hide: all;
                           "
@@ -737,9 +739,270 @@
                   <![endif]-->
                 </div>
                 <div class="spacer" style="padding: 10px 0">&nbsp;</div>
-                <table role="presentation"></table>
               </div>
               <!-- End product news -->
+
+              <!-- Begin community -->
+              <table
+                role="presentation"
+                style="
+                  width: 100%;
+                  border: 0;
+                  border-spacing: 0;
+                  background-color: #121212;
+                "
+              >
+                <tr>
+                  <td style="padding: 40px 25px 0px">
+                    <h2
+                      style="
+                        font-family: Helvetica, 'Helvetica Neue', Helvetica,
+                          Arial, sans-serif;
+                        font-weight: 500;
+                        text-decoration: none;
+                        letter-spacing: 0.15px;
+                        color: #ffffff;
+                        font-size: 36px;
+                        line-height: 20px;
+                        margin: 0px;
+                      "
+                      align="left"
+                    >
+                      <strong>Community</strong>
+                    </h2>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding: 40px 25px 0px">
+                    <a
+                      href="https://braze-images.com/appboy/communication/assets/image_assets/images/64677f5f4b75b1005b15dd8b/original.png?1684504415"
+                      ><img
+                        src="https://i.ibb.co/MV4Ct8v/masterclass-min.webp"
+                        alt="Spotify for podcasters: Masterclass"
+                        border="0"
+                        style="
+                          width: 100%;
+                          height: auto;
+                          max-width: 100%;
+                          display: block;
+                        "
+                        width="600"
+                    /></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding: 35px 35px 0px 25px">
+                    <h2
+                      style="
+                        font-family: Helvetica, 'Helvetica Neue', Helvetica,
+                          Arial, sans-serif;
+                        font-weight: 500;
+                        text-decoration: none;
+                        letter-spacing: 0.15px;
+                        color: #ffffff;
+                        font-size: 30px;
+                        line-height: 33px;
+                        margin: 0px;
+                      "
+                      align="left"
+                    >
+                      <strong
+                        >Introducing Spotify for Podcasters Masterclass</strong
+                      >
+                    </h2>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding: 20px 25px">
+                    <p
+                      class="responsive-p two-col-p"
+                      style="
+                        font-family: Helvetica, 'Helvetica Neue', Helvetica,
+                          Arial, sans-serif;
+                        font-weight: 400;
+                        text-decoration: none;
+                        letter-spacing: 0.15px;
+                        color: #ffffff;
+                        font-size: 18px;
+                        line-height: 22px;
+                        margin: 0px;
+                      "
+                      align="left"
+                    >
+                      Join us for a live watch party and Q&amp;A on June 14 at
+                      12pm EST! You'll learn how to make the most of your
+                      podcast homebase, grow your show, and deepen your
+                      connection with fans.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding: 10px 25px">
+                    <div>
+                      <!--[if mso]>
+                        <v:roundrect
+                          xmlns:v="urn:schemas-microsoft-com:vml"
+                          xmlns:w="urn:schemas-microsoft-com:office:word"
+                          href="https://podcastmasterclass.byspotify.com/"
+                          style="
+                            height: 36px;
+                            v-text-anchor: middle;
+                            width: 160px;
+                          "
+                          arcsize="134%"
+                          strokecolor="#ffffff"
+                          fillcolor="#121212"
+                        >
+                          <w:anchorlock />
+                          <center
+                            style="
+                              color: #ffffff;
+                              font-family: sans-serif;
+                              font-size: 16px;
+                              font-weight: bold;
+                            "
+                          >
+                            Save your spot
+                          </center>
+                        </v:roundrect> <!
+                      [endif]--><a
+                        href="https://podcastmasterclass.byspotify.com/"
+                        style="
+                          background-color: #121212;
+                          border: 1px solid #ffffff;
+                          border-radius: 48px;
+                          color: #ffffff;
+                          display: inline-block;
+                          font-family: sans-serif;
+                          font-size: 16px;
+                          font-weight: bold;
+                          line-height: 36px;
+                          text-align: center;
+                          text-decoration: none;
+                          width: 160px;
+                          -webkit-text-size-adjust: none;
+                          letter-spacing: 0.2px;
+                          mso-hide: all;
+                        "
+                        >Save your spot</a
+                      >
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding: 20px 0px 0px"></td>
+                </tr>
+              </table>
+              <!-- End community -->
+
+              <!-- Begin get resources -->
+
+              <table
+                role="presentation"
+                style="
+                  width: 100%;
+                  border: 0;
+                  border-spacing: 0;
+                  background-color: #3b4f05;
+                "
+              >
+                <tr>
+                  <td style="padding: 40px 0px"></td>
+                </tr>
+
+                <tr>
+                  <td style="padding: 5px 40px 22px">
+                    <h2
+                      style="
+                        font-family: Maax, 'Helvetica Neue', Helvetica, Arial,
+                          sans-serif;
+                        font-weight: 500;
+                        text-decoration: none;
+                        letter-spacing: 0.15px;
+                        color: #ffffff;
+                        font-size: 34px;
+                        line-height: 38px;
+                        margin: 0px;
+                      "
+                      align="center"
+                    >
+                      <strong
+                        >Learn, grow, and get inspired all in one place</strong
+                      >
+                    </h2>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding: 5px 40px 22px">
+                    <div style="text-align: center">
+                      <!--[if mso]>
+                        <v:roundrect
+                          xmlns:v="urn:schemas-microsoft-com:vml"
+                          xmlns:w="urn:schemas-microsoft-com:office:word"
+                          href="https://podcastmasterclass.byspotify.com/"
+                          style="
+                            height: 36px;
+                            v-text-anchor: middle;
+                            width: 160px;
+                          "
+                          arcsize="134%"
+                          strokecolor="#cff56a"
+                          fillcolor="#cff56a"
+                        >
+                          <w:anchorlock />
+                          <center
+                            style="
+                              color: #191414;
+                              font-family: sans-serif;
+                              font-size: 16px;
+                              font-weight: bold;
+                            "
+                          >
+                            Get resources
+                          </center>
+                        </v:roundrect> <!
+                      [endif]--><a
+                        href="https://podcastmasterclass.byspotify.com/"
+                        style="
+                          background-color: #cff56a;
+                          border: 1px solid #cff56a;
+                          border-radius: 48px;
+                          color: #191414;
+                          display: inline-block;
+                          font-family: sans-serif;
+                          font-size: 16px;
+                          font-weight: bold;
+                          line-height: 36px;
+                          text-align: center;
+                          text-decoration: none;
+                          width: 160px;
+                          letter-spacing: 0.2px;
+                          -webkit-text-size-adjust: none;
+                          mso-hide: all;
+                        "
+                        >Get resources</a
+                      >
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <img
+                      src="https://i.ibb.co/mbHhHCp/bottom-green-bg-min.webp"
+                      alt=""
+                      border="0"
+                      style="
+                        width: 100%;
+                        height: auto;
+                        max-width: 100%;
+                        display: block;
+                      "
+                      width="600"
+                    />
+                  </td>
+                </tr>
+              </table>
+              <!-- End get resources -->
             </div>
             <!--[if mso]>
                     </td>
