add get resources and footer sections before responsiveness

--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,144 @@
                 </tr>
               </table>
               <!-- End get resources -->
+
+              <!-- Begin footer -->
+              <table
+                role="presentation"
+                style="
+                  background-color: #f9f9f9;
+                  width: 100%;
+                  border: 0;
+                  border-spacing: 0;
+                "
+              >
+                <tr>
+                  <td style="padding: 35px 30px; text-align: center">
+                    <a
+                      style="text-decoration: none"
+                      href="https://www.instagram.com/spotifyforpodcasters/?utm_source=email&utm_medium=braze&utm_campaign=may_recroom_2023&utm_term=hosted_nonpub_active_US&%24web_only=true"
+                      ><img
+                        src="https://i.ibb.co/SBxjbQJ/instagram-min.webp"
+                        alt="Instagram"
+                        border="0"
+                        width="25"
+                      />
+                    </a>
+                    &nbsp;&nbsp;
+                    <a
+                      style="text-decoration: none"
+                      href="https://twitter.com/forpodcasters?utm_source=email&utm_medium=braze&utm_campaign=may_recroom_2023&utm_term=hosted_nonpub_active_US&%24web_only=true"
+                      ><img
+                        src="https://i.ibb.co/jRrybCT/twitter-min.webp"
+                        alt="Twitter"
+                        border="0"
+                        width="25"
+                      />
+                    </a>
+                    &nbsp;&nbsp;
+                    <a
+                      style="text-decoration: none"
+                      href="https://www.facebook.com/spotifyforpodcasters?utm_source=email&utm_medium=braze&utm_campaign=may_recroom_2023&utm_term=hosted_nonpub_active_US&%24web_only=true"
+                      ><img
+                        src="https://i.ibb.co/dDZDBS7/facebook-min.webp"
+                        alt="Facebook"
+                        border="0"
+                        width="25"
+                      />
+                    </a>
+                    &nbsp;&nbsp;
+                    <a
+                      style="text-decoration: none"
+                      href="https://www.youtube.com/@SpotifyforPodcasters_?utm_source=email&utm_medium=braze&utm_campaign=may_recroom_2023&utm_term=hosted_nonpub_active_US&%24web_only=true"
+                      ><img
+                        src="https://i.ibb.co/jDWWk71/youtube-min.webp"
+                        alt="YouTube"
+                        border="0"
+                        width="25"
+                      />
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    style="
+                      color: #8d8d8d;
+                      font-size: 12px;
+                      line-height: 20px;
+                      padding-bottom: 15px;
+                      font-family: Maax, 'Helvetica Neue', Helvetica, Arial,
+                        sans-serif;
+                      margin: 0px;
+                    "
+                    align="center"
+                  >
+                    <a
+                      href="https://www.spotify.com/is-en/legal/end-user-agreement/?utm_source=email&utm_medium=braze&utm_campaign=may_recroom_2023&utm_term=hosted_nonpub_active_US&%24web_only=true"
+                      style="
+                        color: #8d8d8d;
+                        text-decoration: underline;
+                        font-weight: bold;
+                      "
+                      target="_blank"
+                      >Terms of Service</a
+                    >&nbsp;|&nbsp;
+                    <a
+                      href="https://support.spotify.com/is-en/podcasters/"
+                      style="
+                        color: #8d8d8d;
+                        text-decoration: underline;
+                        font-weight: bold;
+                      "
+                      target="_blank"
+                      >Contact Us</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    style="
+                      color: #8d8d8d;
+                      font-size: 12px;
+                      line-height: 20px;
+                      padding-bottom: 15px;
+                      font-family: Helvetica, 'Helvetica Neue', Helvetica, Arial,
+                        sans-serif;
+                      margin: 0px;
+                    "
+                    align="center"
+                  >
+                    Spotify USA Inc, 4 World Trade Center, 62nd Floor, New
+                    York, NY 10007
+                  </td>
+                </tr>
+                <tr>
+                  <td
+                    style="
+                      color: #8d8d8d;
+                      font-size: 12px;
+                      line-height: 20px;
+                      padding-bottom: 35px;
+                      font-family: Helvetica, 'Helvetica Neue', Helvetica, Arial,
+                        sans-serif;
+                      margin: 0px;
+                    "
+                    align="center"
+                  >
+                    You are receiving this email because you signed up for
+                    Spotify for Podcasters. Not a fan?
+                    <a
+                      href="#"
+                      style="
+                        color: #9d9d9d;
+                        text-decoration: underline;
+                        font-weight: bold;
+                      "
+                      >Unsubscribe</a
+                    >
+                  </td>
+                </tr>
+              </table>
+              <!-- End footer -->
             </div>
             <!--[if mso]>
                     </td>
